# samdul05food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: index.html  indexbackup2.html  indexbackup3.html
src/samdul05food/: data.csv  main.py  mainlocal.py
src/samdul05food/food05data/: food05.csv
